--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 48px;
+    position: fixed;
+    width: 100%;
 }
 
 button {
@@ -32,9 +34,10 @@ button {
     line-height: 125%;
 }
 
-form {
+#form-habits {
     display: flex;
-    padding: 0 48px;
+    padding: 182px 48px 48px;
+    width: fit-content;
 }
 
 .habits {
@@ -88,4 +91,15 @@ input {
 input:checked {
     background: #8B5CF6;
     border: 2px solid #A78BFA;
+}
+
+
+
+
+
+/* ========== Responsividade ========== */
+@media(max-width: 570px) {
+    button div {
+        display: none;
+    }
 }
